--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
@@ -12,11 +12,10 @@
                 <p-dropdown id='value'
                             [options]='clientList'
                             [optionLabel]="'label'"
-                            [filter]="true"
-                            [filterBy]="'label'"
                             [dataKey]="'value'"
-                            [style]="{ width: '80%' }"
-                            placeholder="Select a Client"
+                            [editable]="true"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
+                            placeholder="Select or Type Client name"
                             formControlName='clients' 
                             class="select">
                 </p-dropdown>
@@ -28,12 +27,10 @@
                 <p-dropdown id='value'
                             [options]='clientList'
                             [optionLabel]="'label'"
-                            [filter]="true"
-                            [filterBy]="'label'"
                             [dataKey]="'value'"
-                            [style]="{ width: '80%' }"
-                            placeholder="Select a Client"
-                            formControlName='clients' 
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
+                            placeholder="Select a Branch"
+                            formControlName='branch' 
                             class="select">
                 </p-dropdown>
             </div>
@@ -47,7 +44,7 @@
                 <p-dropdown id='products'
                             [options]='productList'
                             [optionLabel]="'label'"
-                            [style]="{ width: '80%' }"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                             formControlName='products' 
                             [virtualScroll]="true" 
                             [virtualScrollItemSize]="40"
@@ -62,7 +59,7 @@
                 <p-dropdown id='durationType'
                             [options]='durationType'
                             [optionLabel]="'value'"
-                            [style]="{ width: '80%' }"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                             formControlName='durationType'
                             placeholder="Select Duration type" 
                             class="select">
@@ -70,12 +67,12 @@
             </div>
         </div>
         <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
-            <div class="label"><label>Facultative type</label></div>
+            <div class="label"><label>Facultative Type</label></div>
             <div>
                 <p-dropdown id='facultativeType'
                             [options]='facultativeType'
                             [optionLabel]="'value'"
-                            [style]="{ width: '80%' }"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                             formControlName='facultativeType'
                             placeholder="Select Facultative Type"
                             class="select">
@@ -89,8 +86,8 @@
             <div>
                 <p-dropdown id='quotationCovers'
                             [options]='quotationCovers'
-                            [optionLabel]="'desc'"
-                            [style]="{ width: '80%' }"
+                            [optionLabel]="'value'"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                             formControlName='quotationCovers'
                             placeholder="Select Quotation Cover" 
                             class="select">
@@ -103,7 +100,7 @@
                 <p-dropdown id='frequencyOfPayment'
                             [options]='frequencyOfPayment'
                             [optionLabel]="'label'"
-                            [style]="{ width: '80%' }"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                             formControlName='frequencyOfPayment'
                             placeholder="Select Freq. of Payment"
                             class="select">
@@ -111,12 +108,12 @@
             </div>
         </div>
         <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12" >
-            <div class="label"><label>Unit rate Option</label></div>
+            <div class="label"><label>Unit Rate Option</label></div>
             <div>
                 <p-dropdown id='unitRateOption'
                             [options]='unitRateOption'
                             [optionLabel]="'name'"
-                            [style]="{ width: '80%' }"
+                            [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                             formControlName='unitRateOption'
                             placeholder="Select Unit rate"
                             class="select">
@@ -133,7 +130,7 @@
                                 [optionLabel]="'label'"
                                 [filter]="true"
                                 [filterBy]="'label'"
-                                [style]="{ width: '80%' }"
+                                [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                                 formControlName='currency' 
                                 [virtualScroll]="true" 
                                 [virtualScrollItemSize]="50"
@@ -144,20 +141,20 @@
             </div>
             <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12" 
             style="padding-left: 20px;">
-              <label class="label">Effective date</label>
+              <label class="label">Effective Date</label>
               <div class="mx-1">
                 <p-calendar formControlName="effectiveDate" 
                             dateFormat="dd/mm/yy" 
                             [showIcon]="true" 
                             [showButtonBar]="true"
-                            [style]="{ width: '83%', 'border-radius': '15px' }"
+                            [style]="{ 'width': '83%' }"
                             placeholder="dd/mm/yy"
                             >
                 </p-calendar>
               </div>
             </div>
             <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
-              <div class="label"><label>Quotation Calculation type</label></div>
+              <div class="label"><label>Quotation Calculation Type</label></div>
               <div class="form-check radio-group" id="inline">
                   <input
                     class="form-check-input box"
@@ -194,38 +191,25 @@
           <div class="label"><label>Intermediary</label></div>
           <div class="ui-fluid">
               <p-dropdown id='intermediary'
-                          [options]='products'
-                          [optionLabel]="'label'"
-                          [style]="{ width: '80%' }"
+                          [options]='intermediaries'
+                          [optionLabel]="'name'"
+                          [editable]="true"
+                          [style]="{ width: '80%', height: '40px', 'line-height': '10px' }"
                           formControlName='intermediary' 
-                          placeholder="Select an Intermediary"
+                          placeholder="Select/Type an Intermediary name"
                           class="select"
                           >
               </p-dropdown>
           </div>
       </div>
       <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
-        <div class="label"><label>Marketer</label></div>
-        <div class="ui-fluid">
-            <p-dropdown id='intermediary'
-                        [options]='products'
-                        [optionLabel]="'label'"
-                        [style]="{ width: '80%' }"
-                        formControlName='intermediary' 
-                        placeholder="Select an Intermediary"
-                        class="select"
-                        >
-            </p-dropdown>
-        </div>
-    </div>
-      <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
-          <div class="label"><label>Commission rate</label></div>
+          <div class="label"><label>Commission Rate</label></div>
           <div class="form-group mx-2">
               <input type="text"
                          pInputText
                          class="form-control"
                           id='commissionRate'
-                          [style]="{ width: '85%', height: '45px' }"
+                          [style]="{ width: '85%', height: '38px' }"
                           formControlName='commissionRate'
                          >
           </div>
