--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -238,13 +238,13 @@
                    <p class="title1 mt-4 float-start">Do you wish to Continue Creating the Quotation?</p>
                    <div class="mt-3 float-end">
                     <button class="btn btn-outline-primary" data-bs-dismiss="modal">No,I don't</button>
-                    <button class="btn btn-primary" style="margin-left: 10px;" (click)="saveQuotationDetails()">Yes, continue</button>
+                    <button class="btn btn-primary" style="margin-left: 10px;" data-bs-dismiss="modal" (click)="saveQuotationDetails()">Yes, continue</button>
                    </div>
                   </div>
             </div>
           </div>
     </div>
-   
+
            
               
             
